objects/Contact.object
<CustomObject>
    <fields>
        <fullName>FinServ__EmployedSince__c</fullName>
        <description>Year when client started with current employer.</description>
        <label>Employed Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__FaxVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HomeOwnership__c</fullName>
        <label>Home Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HomePhoneVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualId__c</fullName>
        <description>Unique ID that relates this individual&apos;s contact record to its account record.</description>
        <formula>Account.FinServ__IndividualId__c</formula>
        <label>Individual ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LanguagesSpoken__c</fullName>
        <label>Languages Spoken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LastFourDigitSSN__c</fullName>
        <description>Last 4-Digits of SSN or Tax ID</description>
        <label>SSN/Tax ID (Last Four Digits)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__MailingAddress__c</fullName>
        <description>Compound field for Mailing Address.</description>
        <formula>if(ISBLANK(MailingStreet),  &quot;&quot; , MailingStreet &amp; br()) &amp;
if(ISBLANK(MailingCity),  &quot;&quot; , MailingCity&amp; &quot;, &quot; ) &amp;
if(ISBLANK(MailingState),  &quot;&quot; , MailingState&amp; &quot; &quot; ) &amp;
if(ISBLANK(MailingPostalCode),  &quot;&quot; , MailingPostalCode &amp; br()) &amp;
if(ISBLANK(MailingCountry),  &quot;&quot; , MailingCountry)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Married In Community Of Property</fullName>
                </value>
                <value>
                    <fullName>Married Out Community Of Property with Accrual</fullName>
                </value>
                <value>
                    <fullName>Married Out Community Of Property without accrual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__MarketingOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MobileVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MostUsedChannel__c</fullName>
        <label>Most Used Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__MotherMaidenName__c</fullName>
        <description>Mother&apos;s Maiden Name</description>
        <label>Mother&apos;s Maiden Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__NextLifeEvent__c</fullName>
        <label>Next Life Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Enter Workforce</fullName>
                </value>
                <value>
                    <fullName>Returning to Workforce</fullName>
                </value>
                <value>
                    <fullName>First Home Purchase</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>Critical Family Event</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfChildren__c</fullName>
        <label>Number Of Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfDependents__c</fullName>
        <description>Number of dependents.</description>
        <label>Number of Dependents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Occupation__c</fullName>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OtherAddress__c</fullName>
        <description>Compound field for Other Address.</description>
        <formula>if(ISBLANK(OtherStreet), &quot;&quot; , OtherStreet &amp; br()) &amp;
if(ISBLANK(OtherCity), &quot;&quot; , OtherCity&amp; &quot;, &quot; ) &amp;
if(ISBLANK(OtherState), &quot;&quot; , OtherState&amp; &quot; &quot; ) &amp;
if(ISBLANK(OtherPostalCode), &quot;&quot; , OtherPostalCode &amp; br()) &amp;
if(ISBLANK(OtherCountry), &quot;&quot; , OtherCountry)</formula>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PreferredName__c</fullName>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Billing Address as the primary address.</description>
        <label>Primary Address (Billing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsMailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Mailing Address as the primary address.</description>
        <label>Primary Address (Mailing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsOther__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Other Address as the primary address.</description>
        <label>Primary Address (Other)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsShipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Shipping Address as the primary address.</description>
        <label>Primary Address (Shipping)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryCitizenship__c</fullName>
        <label>Primary Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>ContactContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Referrer Score</description>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryCitizenship__c</fullName>
        <label>Secondary Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryLanguage__c</fullName>
        <label>Secondary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ShippingAddress__c</fullName>
        <description>Concatenated shipping address field.</description>
        <formula>if( AND( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , NOT( ISBLANK(Account.ShippingCountry )) ) , Account.ShippingCountry &amp; br(), &quot;&quot; ) &amp;
            if(ISBLANK(Account.ShippingStreet), &quot;&quot; , Account.ShippingStreet &amp; br()) &amp;
            if(ISBLANK(Account.ShippingCity), &quot;&quot; , Account.ShippingCity&amp; &quot;, &quot;)&amp;
            if(ISBLANK(Account.ShippingState),  &quot;&quot; , Account.ShippingState&amp; &quot; &quot;)&amp;
            if(ISBLANK(Account.ShippingPostalCode), &quot;&quot; , Account.ShippingPostalCode &amp; br())  &amp;
            if( OR( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , ISBLANK(Account.ShippingCountry) ) , &quot;&quot; , Account.ShippingCountry)</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxBracket__c</fullName>
        <label>Tax Bracket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>28%</fullName>
                </value>
                <value>
                    <fullName>33%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TaxId__c</fullName>
        <label>Tax ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__WeddingAnniversary__c</fullName>
        <description>Date of wedding anniversary.</description>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retirement_Age__c</fullName>
        <label>Retirement Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_AternativeCellNumber__c</fullName>
        <label>Aternative Cell Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SLC_Disability__c</fullName>
        <label>Disability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_Initials__c</fullName>
        <label>Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_Subscription_Preferences__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Preferences</label>
        <referenceTo>SLC_Subscription_Preferences__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_OwnerUser__c</fullName>
        <label>Assigned From User (Deprecated)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Queue__c</fullName>
        <label>Assigned From Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
        <label>Q-assign Last Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Reviewed_Days__c</fullName>
        <formula>LastModifiedDate - ortoo_qra__Q_assign_Last_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-assign Reviewed Days</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AW_AdviserContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>AW_IdentificationNumber__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.AW_PracticeMember</value>
        </filters>
        <label>All Adviser Contacts</label>
        <sharedTo>
            <group>RSC_ClientandAdviserServiceCentreAgents</group>
            <group>RSC_ClientandAdviserServiceCentreLeaders</group>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AW_UpcomingBirthdaysNext7Days</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>AW_Age__c</columns>
        <columns>FinServ__Gender__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Account.FinServ__Status__c</field>
            <operation>equals</operation>
            <value>Prospect,Active</value>
        </filters>
        <label>Upcoming Birthdays - Next 7 Days</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AW_ZA_Retail_GroupExecutiveClientandAdviserExperience</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>AW_Age__c</columns>
        <columns>FinServ__Gender__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_RMDs_Next_7_Days</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>lessThan</operation>
            <value>70.5</value>
        </filters>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>greaterThan</operation>
            <value>70</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:82</value>
        </filters>
        <label>Upcoming RMDs (Next 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AW_ZA_Retail_GroupExecutiveClientandAdviserExperience</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>AW_Age__c</columns>
        <columns>FinServ__Gender__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Review_Incomplete</fullName>
        <columns>FULL_NAME</columns>
        <columns>AW_ReviewMonth__c</columns>
        <columns>AW_AnnualReviewDate__c</columns>
        <columns>AW_Age__c</columns>
        <columns>FinServ__Gender__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
        <columns>ACCOUNT.OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account.FinServ__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>AW_ReviewDone__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>greaterThan</operation>
            <value>18</value>
        </filters>
        <label>Reviews Incomplete</label>
    </listViews>
    <listViews>
        <fullName>Reviews_Completed</fullName>
        <columns>FULL_NAME</columns>
        <columns>AW_ReviewMonth__c</columns>
        <columns>AW_AnnualReviewDateCompleted__c</columns>
        <columns>AW_Age__c</columns>
        <columns>FinServ__Gender__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
        <columns>ACCOUNT.OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account.FinServ__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>AW_ReviewDone__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>greaterThan</operation>
            <value>18</value>
        </filters>
        <label>Reviews Complete</label>
    </listViews>
    <recordTypes>
        <fullName>AW_Business</fullName>
        <active>true</active>
        <description>Liberty Business Contact</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_Individual</fullName>
        <active>true</active>
        <description>Liberty Individual Contact</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_PracticeMember</fullName>
        <active>true</active>
        <description>All individual Financial Advisers including Tied and Independent</description>
        <label>Liberty Practice Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Contact data for an institution or a business account</description>
        <label>Business</label>
    </recordTypes>
</CustomObject>